Izmena izgleda portala i mnoge promene

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                 <h2>SHORT FORM PRODUKCIJA</h2>
             </div>
             <p>Upotrebljavamo naše talente i scenariste da kreiramo video sadržaj koji angažuje i postiže rezultate.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
         <div class="card">
@@ -81,7 +81,7 @@
                 <h2>IZRADA VEB-SAJTOVA</h2>
             </div>
             <p>Od dizajna do razvoja, stvaramo web stranice koje su atraktivne, funkcionalne i prilagođene mobilnim uređajima.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
         <div class="card">
@@ -90,7 +90,7 @@
                 <h2>EDITOVANJE VIDEO ZAPISA</h2>
             </div>
             <p>Naši iskusni montažeri podižu vaš video sadržaj na viši nivo uz pomoć efekata, muzike i profesionalnog finiša.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
         <div class="card">
@@ -99,7 +99,7 @@
                 <h2>VOĐENJE DRUŠTVENIH MREŽA</h2>
             </div>
             <p>Preuzimamo kontrolu nad vašim društvenim mrežama, stvaramo privlačan sadržaj i povećavamo vašu bazu pratilaca.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
         <div class="card">
@@ -108,7 +108,7 @@
                 <h2>PROFESIONALNO FOTOGRAFISANJE I SNIMANJE</h2>
             </div>
             <p>Naši profesionalni fotografi i snimatelji stvaraju fotografije i video zapise za sve vaše potrebe.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
         <div class="card">
@@ -117,7 +117,7 @@
                 <h2>BUSINESS MANAGER</h2>
             </div>
             <p>Kreiranje i optimizacija kampanja za bolje rezultate i praćenje performansi i analiza podataka.</p>
-            <a href="#contact">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
+            <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
         </div>
 
     </div>
@@ -246,53 +246,6 @@
     <button class="testimonial-nav-right" id="nextTestimonial">
         <ion-icon name="chevron-forward-outline"></ion-icon>
     </button>
-    </div>
-</section>
-
-<section class="features" id="features">
-    <h2 class="naslov underline">Our Features</h2>
-    <div class="container">
-
-    <div class="list">
-        <div class="card">
-            <ion-icon name="bulb-outline"></ion-icon>
-            <div class="content">
-                <h3>24/7 Support</h3>
-                <p>We are always here for you, no matter the time. Our team is available to provide support whenever you need it.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <ion-icon name="color-palette-outline"></ion-icon>
-            <div class="content">
-                <h3>Creative Design</h3>
-                <p>We create innovative and visually appealing designs that will capture the attention of your target audience.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="banner">
-      <img src="images/features.png" class="w-100 animation">
-    </div>
-
-    <div class="list">
-        <div class="card">
-            <ion-icon name="code-slash-outline"></ion-icon>
-            <div class="content">
-                <h3>Professional Development</h3>
-                <p>Our team of developers creates modern and functional digital platforms that deliver results.</p>
-            </div>
-        </div>
-
-        <div class="card">
-            <ion-icon name="rocket-outline"></ion-icon>
-            <div class="content">
-                <h3>Fast Start</h3>
-                <p>Our agency ensures a quick launch of campaigns, so you can start seeing results immediately.</p>
-            </div>
-        </div>
-    </div>
-
     </div>
 </section>
 
@@ -444,6 +397,53 @@
 
         <button type="submit">Pošaljite upit</button>
     </form>
+    </div>
+</section>
+
+<section class="features" id="features">
+    <h2 class="naslov underline">Our Features</h2>
+    <div class="container">
+
+    <div class="list">
+        <div class="card">
+            <ion-icon name="bulb-outline"></ion-icon>
+            <div class="content">
+                <h3>24/7 Support</h3>
+                <p>We are always here for you, no matter the time. Our team is available to provide support whenever you need it.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <ion-icon name="color-palette-outline"></ion-icon>
+            <div class="content">
+                <h3>Creative Design</h3>
+                <p>We create innovative and visually appealing designs that will capture the attention of your target audience.</p>
+            </div>
+        </div>
+    </div>
+
+    <div class="banner">
+      <img src="images/features.png" class="w-100 animation">
+    </div>
+
+    <div class="list">
+        <div class="card">
+            <ion-icon name="code-slash-outline"></ion-icon>
+            <div class="content">
+                <h3>Professional Development</h3>
+                <p>Our team of developers creates modern and functional digital platforms that deliver results.</p>
+            </div>
+        </div>
+
+        <div class="card">
+            <ion-icon name="rocket-outline"></ion-icon>
+            <div class="content">
+                <h3>Fast Start</h3>
+                <p>Our agency ensures a quick launch of campaigns, so you can start seeing results immediately.</p>
+            </div>
+        </div>
+    </div>
+
     </div>
 </section>
 
