--- a/index.html
+++ b/index.html
@@ -194,8 +194,9 @@
     <div class="testimonial-slider">
 
     <div class="testimonial-item active">
-        <div class="testimonial-image">
-            <img src="images/features.png" alt="Slika">
+        <div class="testimonial-video">
+            <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+            <div class="video-overlay"></div>
         </div>
 
         <div class="testimonial-content">
@@ -210,8 +211,9 @@
     </div>
 
     <div class="testimonial-item">
-        <div class="testimonial-image">
-            <img src="images/features.png" alt="Slika">
+        <div class="testimonial-video">
+            <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <div class="video-overlay"></div>
         </div>
 
         <div class="testimonial-content">
@@ -226,10 +228,10 @@
     </div>
 
     <div class="testimonial-item">
-        <div class="testimonial-image">
-            <img src="images/features.png" alt="Image 3">
+        <div class="testimonial-video">
+            <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
+            <div class="video-overlay"></div>
         </div>
-
         <div class="testimonial-content">
             <div class="testimonial-header">
                 <img src="images/mwp.png" class="testimonial-logo" alt="Logo">
@@ -246,6 +248,63 @@
     <button class="testimonial-nav-right" id="nextTestimonial">
         <ion-icon name="chevron-forward-outline"></ion-icon>
     </button>
+    </div>
+</section>
+
+<section class="contact-form" id="kontakt">
+    <h2 class="naslov underline">Kontaktiraj nas</h2>
+    <div class="container">
+
+    <form>
+        <div class="row">
+            <div class="form-group">
+                <label for="ime">Vaše ime i prezime</label>
+                <input type="text" id="ime" placeholder="Filip Filipovic">
+            </div>
+            <div class="form-group">
+                <label for="naziv">Naziv kompanije</label>
+                <input type="text" id="naziv" placeholder="Google, Youtube..">
+            </div>
+            <div class="form-group">
+                <label for="email">Vaša e-mail adresa</label>
+                <input type="email" id="email" placeholder="vasa@kompanija.com">
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="form-group">
+                <label for="websajt">Vaš vebsajt</label>
+                <input type="text" id="websajt" placeholder="Ukoliko imate vebsajt, nije obavezno">
+            </div>
+            <div class="form-group">
+                <label for="telefon">Kontakt telefon</label>
+                <input type="text" id="telefon" placeholder="+381 60 123 45 67">
+            </div>
+            <div class="form-group">
+                <label for="budzet">Koji je Vaš budžet za projekat?</label>
+                <input type="text" id="budzet" placeholder="500$, 1000$, 5000$...">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label>Koje usluge su Vam potrebne? Možete izabrati više usluga</label>
+            <div class="radio-group">
+                <label><input type="radio" name="usluge"> Short Form Produkcija</label>
+                <label><input type="radio" name="usluge"> Izrada web-sajta</label>
+                <label><input type="radio" name="usluge"> Editovanje video zapise</label>
+                <label><input type="radio" name="usluge"> Vođenje društvenih mreža</label>
+                <label><input type="radio" name="usluge"> Facebook & Instagram reklamiranje</label>
+                <label><input type="radio" name="usluge"> Profesionalno fotografisanje i snimanje</label>
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="opis">Objasnite nam ukratko kakav Vam projekat treba i osnovne informacije</label>
+            <textarea id="opis" placeholder="Potrebno nam je reklamiranje našim proizvodima putem Facebook reklama..."></textarea>
+        </div>
+
+        <button type="submit">Pošaljite upit</button>
+    </form>
     </div>
 </section>
 
@@ -341,63 +400,6 @@
 
     </div>
     <a href="postovi.html"><button class="btn" id="view">Pogledaj više</button></a>
-</section>
-
-<section class="contact-form" id="kontakt">
-    <h2 class="naslov underline">Kontaktiraj nas</h2>
-    <div class="container">
-
-    <form>
-        <div class="row">
-            <div class="form-group">
-                <label for="ime">Vaše ime i prezime</label>
-                <input type="text" id="ime" placeholder="Filip Filipovic">
-            </div>
-            <div class="form-group">
-                <label for="naziv">Naziv kompanije</label>
-                <input type="text" id="naziv" placeholder="Google, Youtube..">
-            </div>
-            <div class="form-group">
-                <label for="email">Vaša e-mail adresa</label>
-                <input type="email" id="email" placeholder="vasa@kompanija.com">
-            </div>
-        </div>
-
-        <div class="row">
-            <div class="form-group">
-                <label for="websajt">Vaš vebsajt</label>
-                <input type="text" id="websajt" placeholder="Ukoliko imate vebsajt, nije obavezno">
-            </div>
-            <div class="form-group">
-                <label for="telefon">Kontakt telefon</label>
-                <input type="text" id="telefon" placeholder="+381 60 123 45 67">
-            </div>
-            <div class="form-group">
-                <label for="budzet">Koji je Vaš budžet za projekat?</label>
-                <input type="text" id="budzet" placeholder="500$, 1000$, 5000$...">
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label>Koje usluge su Vam potrebne? Možete izabrati više usluga</label>
-            <div class="radio-group">
-                <label><input type="radio" name="usluge"> Short Form Produkcija</label>
-                <label><input type="radio" name="usluge"> Izrada web-sajta</label>
-                <label><input type="radio" name="usluge"> Editovanje video zapise</label>
-                <label><input type="radio" name="usluge"> Vođenje društvenih mreža</label>
-                <label><input type="radio" name="usluge"> Facebook & Instagram reklamiranje</label>
-                <label><input type="radio" name="usluge"> Profesionalno fotografisanje i snimanje</label>
-            </div>
-        </div>
-
-        <div class="form-group">
-            <label for="opis">Objasnite nam ukratko kakav Vam projekat treba i osnovne informacije</label>
-            <textarea id="opis" placeholder="Potrebno nam je reklamiranje našim proizvodima putem Facebook reklama..."></textarea>
-        </div>
-
-        <button type="submit">Pošaljite upit</button>
-    </form>
-    </div>
 </section>
 
 <section class="features" id="features">
