--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 <body class="unselectable" id="top">
 
 <header>
-    <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
-    <ul>
-        <li><a href="#about">O nama</a></li>
-        <li><a href="#usluge">Usluge</a></li>
-        <li><a href="#radovi">Radovi</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>        
-        <li><a href="#portfolio">Portfolio</a></li>
-        <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
-    </ul>
+  <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
+  <ul>
+      <li><a href="#about">O nama</a></li>
+      <li><a href="#usluge">Usluge</a></li>
+      <li><a href="#radovi">Radovi</a></li>
+      <li><a href="#kontakt">Kontakt</a></li>        
+      <li><a href="#portfolio">Portfolio</a></li>
+      <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
+      <li><button id="theme-toggle">🌙</button></li>
+  </ul>
 </header>
 
 <section class="hero" id="home">
@@ -289,12 +290,12 @@
         <div class="form-group">
             <label>Koje usluge su Vam potrebne? Možete izabrati više usluga</label>
             <div class="radio-group">
-                <label><input type="radio" name="usluge"> Short Form Produkcija</label>
-                <label><input type="radio" name="usluge"> Izrada web-sajta</label>
-                <label><input type="radio" name="usluge"> Editovanje video zapise</label>
-                <label><input type="radio" name="usluge"> Vođenje društvenih mreža</label>
-                <label><input type="radio" name="usluge"> Facebook & Instagram reklamiranje</label>
-                <label><input type="radio" name="usluge"> Profesionalno fotografisanje i snimanje</label>
+                <label><input type="checkbox" name="usluge"> Short Form Produkcija</label>
+                <label><input type="checkbox" name="usluge"> Izrada web-sajta</label>
+                <label><input type="checkbox" name="usluge"> Editovanje video zapise</label>
+                <label><input type="checkbox" name="usluge"> Vođenje društvenih mreža</label>
+                <label><input type="checkbox" name="usluge"> Facebook & Instagram reklamiranje</label>
+                <label><input type="checkbox" name="usluge"> Profesionalno fotografisanje i snimanje</label>
             </div>
         </div>
 
@@ -402,6 +403,7 @@
     <a href="postovi.html"><button class="btn" id="view">Pogledaj više</button></a>
 </section>
 
+<!--
 <section class="features" id="features">
     <h2 class="naslov underline">Our Features</h2>
     <div class="container">
@@ -448,7 +450,7 @@
 
     </div>
 </section>
-
+-->
 <section class="footer">
     <div class="footer-top">
     <div class="container">
