--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <p>Vaš Pouzdani Marketinški Partner</p>
             <h1>Kreiramo strategije koje donose rezultate.</h1>
             <p id="text">U CM Agency specijalizovani smo za razvoj veb sajtova, produkciju video sadržaja, kratke klipove, dizajn logotipa i sve oblike modernog marketinga koji će pomoći rastu vašeg biznisa.</p>
-            <a href="#contact" class="btn">Kontaktirajte nas <ion-icon name="play-outline"></ion-icon></a>
+            <a href="#kontakt" class="btn">Kontaktirajte nas <ion-icon name="play-outline"></ion-icon></a>
         </div>
 
         <div class="banner">
@@ -402,7 +402,6 @@
     </div>
     <a href="postovi.html"><button class="btn" id="view">Pogledaj više</button></a>
 </section>
-
 <!--
 <section class="features" id="features">
     <h2 class="naslov underline">Our Features</h2>
