--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </div>
 
         <div class="banner">
-            <img src="images/hero.png" class="animation">
+            <img src="images/ilustaracije/hero.png" class="animation">
         </div>
     </div>
 </section>
@@ -44,7 +44,7 @@
 <section class="about" id="about">
     <div class="container">
         <div class="banner">
-            <img src="images/about.png" class="w-100 animation">
+            <img src="images/ilustaracije/about.png" class="w-100 animation">
         </div>
   
         <div class="content">
@@ -426,7 +426,7 @@
     </div>
 
     <div class="banner">
-      <img src="images/features.png" class="w-100 animation">
+      <img src="images/ilustracije/features.png" class="w-100 animation">
     </div>
 
     <div class="list">
