--- a/index.html
+++ b/index.html
@@ -14,16 +14,19 @@
 <body class="unselectable" id="top">
 
 <header>
-  <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
-  <ul>
-      <li><a href="#about">O nama</a></li>
-      <li><a href="#usluge">Usluge</a></li>
-      <li><a href="#radovi">Radovi</a></li>
-      <li><a href="#kontakt">Kontakt</a></li>        
-      <li><a href="#portfolio">Portfolio</a></li>
-      <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
-      <li><button id="theme-toggle">🌙</button></li>
-  </ul>
+    <a href="#" class="logo"><img src="images/logo.png" alt="Logo">CM Agency</a>
+    <button class="hamburger" aria-label="Toggle navigation">
+        <ion-icon name="menu-outline"></ion-icon>
+    </button>
+    <ul>
+        <li><a href="#about">O nama</a></li>
+        <li><a href="#usluge">Usluge</a></li>
+        <li><a href="#radovi">Radovi</a></li>
+        <li><a href="#kontakt">Kontakt</a></li>        
+        <li><a href="#portfolio">Portfolio</a></li>
+        <li><a href="portal.html" class="btn">Prijavi se <ion-icon name="log-in-outline"></ion-icon></a></li>
+        <li><button id="theme-toggle">🌙</button></li>
+    </ul>
 </header>
 
 <section class="hero" id="home">
@@ -70,7 +73,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="videocam-outline"></ion-icon>
-                <h2>SHORT FORM PRODUKCIJA</h2>
+                <h2>Short-Form Produkcija</h2>
             </div>
             <p>Upotrebljavamo naše talente i scenariste da kreiramo video sadržaj koji angažuje i postiže rezultate.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
@@ -79,7 +82,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="earth-outline"></ion-icon>
-                <h2>IZRADA VEB-SAJTOVA</h2>
+                <h2>Izdrada Websajtova</h2>
             </div>
             <p>Od dizajna do razvoja, stvaramo web stranice koje su atraktivne, funkcionalne i prilagođene mobilnim uređajima.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
@@ -88,7 +91,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="film-outline"></ion-icon>
-                <h2>EDITOVANJE VIDEO ZAPISA</h2>
+                <h2>Editovanje video zapisa</h2>
             </div>
             <p>Naši iskusni montažeri podižu vaš video sadržaj na viši nivo uz pomoć efekata, muzike i profesionalnog finiša.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
@@ -97,7 +100,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="people-outline"></ion-icon>
-                <h2>VOĐENJE DRUŠTVENIH MREŽA</h2>
+                <h2>Vodjenje drustvenih mreza</h2>
             </div>
             <p>Preuzimamo kontrolu nad vašim društvenim mrežama, stvaramo privlačan sadržaj i povećavamo vašu bazu pratilaca.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
@@ -106,7 +109,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="camera-outline"></ion-icon>
-                <h2>PROFESIONALNO FOTOGRAFISANJE I SNIMANJE</h2>
+                <h2>Profesionalno fotografisanje</h2>
             </div>
             <p>Naši profesionalni fotografi i snimatelji stvaraju fotografije i video zapise za sve vaše potrebe.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
@@ -115,7 +118,7 @@
         <div class="card">
             <div class="card-header">
                 <ion-icon name="stats-chart-outline"></ion-icon>
-                <h2>BUSINESS MANAGER</h2>
+                <h2>Business manager</h2>
             </div>
             <p>Kreiranje i optimizacija kampanja za bolje rezultate i praćenje performansi i analiza podataka.</p>
             <a href="#kontakt">Prava usluga za mene <ion-icon name="arrow-forward-outline"></ion-icon></a>
