Responzivnost fix na portalu

--- a/portal.html
+++ b/portal.html
@@ -93,6 +93,11 @@ header .btn{
     header .btn{
         padding: 6px 18px !important;
         font-size: 13px;
+        padding: 10px 20px;
+        margin: 0;
+        width: auto;
+        align-items: center;
+        border-radius: 5px 20px;
     }
 }
 </style>
