--- a/portal.html
+++ b/portal.html
@@ -29,16 +29,18 @@
     </div>
 
     <div id="content" class="hidden">
-        <a href="https://tinyurl.com/listanotion" target="_blank">Kategorije</a> |
-        <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
-        <a href="https://cmagency.onrender.com" target="_blank">Server provera</a>
-
+        <div class="gore">
+            <a href="#" onclick="showCategories()">Kategorije</a> |
+            <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
+            <a href="https://cmagency.onrender.com" target="_blank">Server provera</a>
+        </div>
+        <!-- LEADS -->
         <h2>Dodaj leads</h2>
         <input type="text" id="textInput" placeholder="Unesi naziv ili link">
         <input list="categoryList" id="categoryInput" placeholder="Unesi ili izaberi kategoriju">
         <datalist id="categoryList"></datalist>
         <button onclick="addItem()">Dodaj</button>
-
+        <!-- LISTA -->
         <h2 id="lista">Lista</h2>
         <p id="counter">Ukupno stavki: 0</p>
         <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
@@ -50,6 +52,18 @@
         <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
         <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
     </div>
+        
+    <!-- KATEGORIJE -->
+    <div id="kategorije" class="hidden">
+        <h2>Kategorije</h2>
+        <ul id="klist">
+            <div id="loadingMessage"></div>
+        </ul>
+        <div class="button-group">
+            <button id="btn3" onclick="backToMain()">Nazad</button>
+            <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
+        </div>
+    </div>
 </section>
 
 </div>
@@ -60,6 +74,9 @@
 <script src="app.js"></script>
 
 <style>
+.hidden {
+    display: none !important;
+}
 body {
     height: 100vh;
     overflow: hidden;
