Dodata animacija za ucitavanje videa

--- a/index.html
+++ b/index.html
@@ -136,6 +136,7 @@
             <span class="video-title">@maskote_lazarevac</span>
             <a href="https://instagram.com/reel/DFXT-Dqs1rf" target="_blank">
                 <video src="images/radovi/maskote.mp4" muted loop autoplay playsinline></video>
+                <div class="video-loader"></div>
             </a> 
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
@@ -149,6 +150,7 @@
             <span class="video-title">@cmagency.marketing</span>
             <a href="https://instagram.com/reel/DFQh-Oqts6F" target="_blank">
                 <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+                <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
@@ -162,6 +164,7 @@
             <span class="video-title">@lukaxcvetkovic</span>
             <a href="https://instagram.com/reel/C3lFASENYXZ" target="_blank">
             <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
@@ -175,6 +178,7 @@
             <span class="video-title">@lukaxcvetkovic</span>
             <a href="https://instagram.com/reel/C3DW0c9tzpS" target="_blank">
             <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
@@ -200,6 +204,7 @@
     <div class="testimonial-item active">
         <div class="testimonial-video">
             <video src="images/radovi/agency.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
 
@@ -217,6 +222,7 @@
     <div class="testimonial-item">
         <div class="testimonial-video">
             <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
 
@@ -234,6 +240,7 @@
     <div class="testimonial-item">
         <div class="testimonial-video">
             <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
         <div class="testimonial-content">
