Implement new login system

--- a/portal.html
+++ b/portal.html
@@ -16,7 +16,7 @@
 
 <header id="portal">
     <a href="index.html" class="logo"><img src="images/logo.png">CM Agency</a>
-    <a href="portal.html"class="btn" id="logout" onclick="logout()">Odjavi se</a>
+    <button class="btn" id="logout" onclick="logout()">Odjavi se</button>
 </header>
 
 <div class="center-wrapper">
