Implement completion toggling

--- a/portal.html
+++ b/portal.html
@@ -52,6 +52,7 @@
         <ul id="list">
             
         </ul>
+        <button id="showCompletedButton" onclick="toggleShowCompleted()">Prikazi samo zavrsene</button>
         <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
         <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
     </div>
