--- a/portal.html
+++ b/portal.html
@@ -79,7 +79,7 @@
     <!--SERVER PROVERA-->
     <div id="server" class="hidden">
         <h2>Server provera</h2>
-        <iframe src="https://cmagency.onrender.com/" frameborder="0"></iframe>
+        <iframe src="" frameborder="0"></iframe>
         <button id="btn3" onclick="backToMain()">Nazad</button>
     </div>
 </section>
