Add 'completed' to categories

--- a/portal.html
+++ b/portal.html
@@ -31,7 +31,7 @@
 
     <div id="content" class="hidden">
         <div class="gore">
-            <a href="#" onclick="showCategories()">Kategorije</a> |
+            <a href="#" onclick="openCategoriesTab()">Kategorije</a> |
             <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
             <a href="#" onclick="showNotepad()">Notepad</a> |
             <a href="#" onclick="showIframe()">Server provera</a>
