Dodato obavestenje da nema nezavrsenih

--- a/portal.html
+++ b/portal.html
@@ -8,8 +8,6 @@
     <title>CM Agency - Portal</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/x-icon" href="images/logo.png">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&family=Source+Sans+Pro:wght@600;700&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -31,7 +29,7 @@
 
     <div id="content" class="hidden">
         <div class="gore">
-            <a href="#" onclick="openCategoriesTab()">Kategorije</a> |
+            <a href="#" onclick="showCategory()">Kategorije</a> |
             <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
             <a href="#" onclick="showNotepad()">Notepad</a> |
             <a href="#" onclick="showIframe()">Server provera</a>
