--- a/portal.html
+++ b/portal.html
@@ -32,7 +32,7 @@
             <a href="#" onclick="showCategory()">Kategorije</a> |
             <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
             <a href="#" onclick="showNotepad()">Notepad</a> |
-            <a href="#" onclick="showIframe()">Server provera</a>
+            <a href="#" onclick="showFunctions()">Server funkcije</a>
             
         </div>
         <!-- LEADS -->
@@ -76,7 +76,7 @@
 
     <!--SERVER PROVERA-->
     <div id="server" class="hidden">
-        <h2>Server provera</h2>
+        <h2>Server funkcije</h2>
         <iframe src="" frameborder="0"></iframe>
         <button id="btn3" onclick="backToMain()">Nazad</button>
     </div>
