Dodata modernija obavestenja za uspesnost/neuspesnost

--- a/portal.html
+++ b/portal.html
@@ -19,6 +19,8 @@
 
 <div class="center-wrapper">
 
+<div id="notification-container"></div>
+
 <section class="portal">
     <div id="log">
         <h2>Prijava</h2>
