--- a/portal.html
+++ b/portal.html
@@ -40,7 +40,7 @@
         <input type="text" id="textInput" placeholder="Unesi naziv ili link">
         <input list="categoryList" id="categoryInput" placeholder="Unesi ili izaberi kategoriju">
         <datalist id="categoryList"></datalist>
-        <button onclick="addItem()">Dodaj</button>
+        <button id="addItemBtn" onclick="addItem()">Dodaj</button>
         <!-- LISTA -->
         <h2 id="lista">Lista</h2>
         <p id="counter">Ukupno stavki: 0</p>
