--- a/portal.html
+++ b/portal.html
@@ -18,69 +18,73 @@
 </header>
 
 <div class="center-wrapper">
-
-<div id="notification-container"></div>
-
-<section class="portal">
     <div id="log">
-        <h2>Prijava</h2>
-        <input type="text" id="username" placeholder="Korisničko ime">
-        <input type="password" id="password" placeholder="Lozinka">
-        <button onclick="login()">Prijavi se</button>
+      <h2>Prijava</h2>
+      <input type="text" id="username" placeholder="Korisničko ime">
+      <input type="password" id="password" placeholder="Lozinka">
+      <button onclick="login()">Prijavi se</button>
     </div>
 
-    <div id="content" class="hidden">
+    <div id="notification-container"></div>
+
+    <section class="portal hidden" id="portal-content">
+        <div id="content">
+            
         <div class="gore">
-            <a href="#" onclick="showCategory()">Kategorije</a> |
-            <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
-            <a href="#" onclick="showNotepad()">Notepad</a>
+            <div id="weather-container">
+                <img id="weather-icon" src="" alt="Vremenska ikonica" style="display: none;">
+                <div id="current-temp"></div>
+            </div>
+            <div class="links">
+                <a href="#" onclick="showCategory()">Kategorije</a> |
+                <a href="https://facebook.com/ads/library" target="_blank">Ads library</a> |
+                <a href="#" onclick="showNotepad()">Notepad</a>
+            </div>
+            <div id="current-time"></div>
         </div>
-
+  
         <div class="middle-section">
-            <!-- LEADS -->
-            <h2>Dodaj leads</h2>
-            <input type="text" id="textInput" placeholder="Unesi naziv ili link">
-            <input list="categoryList" id="categoryInput" placeholder="Unesi ili izaberi kategoriju">
-            <datalist id="categoryList"></datalist>
-            <button id="addItemBtn" onclick="addItem()">Dodaj</button>
-            <!-- LISTA -->
-            <h2 id="lista">Lista</h2>
-            <p id="counter">Ukupno stavki: 0</p>
-            <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
-            <datalist id="filterCategoryList"></datalist>
-            <button id="btn2" onclick="filterItems()">Filtriraj</button>
-            <ul id="list"></ul>
+          <!-- LEADS -->
+          <h2>Dodaj leads</h2>
+          <input type="text" id="textInput" placeholder="Unesi naziv ili link">
+          <input list="categoryList" id="categoryInput" placeholder="Unesi ili izaberi kategoriju">
+          <datalist id="categoryList"></datalist>
+          <button id="addItemBtn" onclick="addItem()">Dodaj</button>
+          <!-- LISTA -->
+          <h2 id="lista">Lista</h2>
+          <p id="counter">Ukupno stavki: 0</p>
+          <input list="filterCategoryList" id="filterCategoryInput" placeholder="Filtriraj po kategoriji">
+          <datalist id="filterCategoryList"></datalist>
+          <button id="btn2" onclick="filterItems()">Filtriraj</button>
+          <ul id="list"></ul>
         </div>
-
+  
         <button id="showCompletedButton" onclick="toggleShowCompleted()">Prikazi samo zavrsene</button>
         <div class="button-group">  
-            <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
-            <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
+          <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
+          <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
         </div>
-    </div>
-        
-    <!-- KATEGORIJE -->
-    <div id="kategorije" class="hidden">
-        <h2>Kategorije</h2>
-        <ul id="klist">
-        </ul>
+        </div>
 
-        <button id="addCategory" onclick="addCategory()">Dodaj kategoriju</button>
-        <div class="button-group">
+        <!-- Kategorije  -->
+        <div id="kategorije" class="hidden">
+            <h2>Kategorije</h2>
+            <ul id="klist"></ul>
+            <button id="addCategory" onclick="addCategory()">Dodaj kategoriju</button>
+            <div class="button-group">
             <button id="btn3" onclick="backToMain()">Nazad</button>
             <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
+            </div>
         </div>
-    </div>
-
-    <!--  NOTEPAD   -->
-    <div id="notepad" class="hidden">
-        <h2>Notepad</h2>
-        <textarea id="notepadContent" placeholder="Piši ovde bilo šta..."></textarea>
-        <button onclick="backToMain()">Nazad</button>
-    </div>
-</section>
-
-</div>
+  
+        <!---  Notepad  --->
+        <div id="notepad" class="hidden">
+            <h2>Notepad</h2>
+            <textarea id="notepadContent" placeholder="Piši ovde bilo šta..."></textarea>
+            <button onclick="backToMain()">Nazad</button>
+        </div>
+    </section>
+  </div>
 
 </body>
 </html>
@@ -99,10 +103,14 @@ body {
 section{
     display: block;
 }
+header a{
+    animation: fadeInLeft 0.5s;
+}
 header .btn{
     text-transform: none;
     font-weight: 500;
     padding: 12px 35px;
+    animation: fadeInRight 0.5s;
 }
 .center-wrapper {
     display: flex;
@@ -111,6 +119,7 @@ header .btn{
     width: 100%;
     height: 100%;
 }
+
 @media(max-width: 768px){
     header{
         padding: 15px;
