--- a/portal.html
+++ b/portal.html
@@ -18,6 +18,7 @@
 </header>
 
 <div class="center-wrapper">
+    
     <div id="log">
       <h2>Prijava</h2>
       <input type="text" id="username" placeholder="Korisničko ime">
@@ -62,6 +63,7 @@
         <button id="showCompletedButton" onclick="toggleShowCompleted()">Prikazi samo zavrsene</button>
         <div class="button-group">  
           <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
+          <button id="btn4" onclick="location.reload()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
           <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
         </div>
         </div>
@@ -73,6 +75,7 @@
             <button id="addCategory" onclick="addCategory()">Dodaj kategoriju</button>
             <div class="button-group">
             <button id="btn3" onclick="backToMain()">Nazad</button>
+            <button id="btn4" onclick="location.reload()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
             <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
             </div>
         </div>
@@ -84,12 +87,15 @@
             <button onclick="backToMain()">Nazad</button>
         </div>
     </section>
-  </div>
+
+</div>
 
 </body>
 </html>
 
 <script src="app.js"></script>
+<script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 
 <style>
 .hidden {
