Refresh samo portala ne cele stranice

--- a/portal.html
+++ b/portal.html
@@ -68,7 +68,7 @@
         <button class="unselectable" id="showCompletedButton" onclick="toggleShowCompleted()">Prikazi samo zavrsene</button>
         <div class="button-group unselectable">  
           <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
-          <button id="btn4" onclick="location.reload()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
+          <button id="btn4" onclick="refreshPortal()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
           <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
         </div>
         </div>
