Otvaranje nezavrsenih linkova odjednom

--- a/portal.html
+++ b/portal.html
@@ -69,6 +69,7 @@
         <div class="button-group unselectable">  
           <button id="btn3" onclick="downloadList()">Preuzmi listu</button>
           <button id="btn4" onclick="refreshPortal()"><ion-icon name="refresh-circle-outline"></ion-icon></button>
+          <button id="btn4" onclick="openall()"><ion-icon name="link-outline"></ion-icon></button>
           <button id="btn3" onclick="searchList()">Pretrazi u listi</button>
         </div>
         </div>
