Novi video kiroprakticno

--- a/index.html
+++ b/index.html
@@ -162,9 +162,9 @@
         </div>
 
         <div class="video-card">
-            <span class="video-title">@lukaxcvetkovic</span>
-            <a href="https://instagram.com/reel/C3lFASENYXZ" target="_blank">
-            <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <span class="video-title">@kiroprakticno</span>
+            <a href="https://instagram.com/reel/DHVz8j5xMXY" target="_blank">
+            <video src="images/radovi/kiroprakticno.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
