--- a/portal.html
+++ b/portal.html
@@ -20,15 +20,23 @@
 <div class="center-wrapper">
     
     <div id="log">
-      <h2 class="unselectable">Prijava</h2>
-      <input type="text" id="username" placeholder="Korisničko ime">
-      <div class="password-container">
-        <input type="password" id="password" placeholder="Lozinka">
-        <span class="toggle-password" onclick="togglePassword()">
-          <ion-icon name="eye-outline" id="eye-icon"></ion-icon>
-        </span>
-      </div>
-      <button class="unselectable" onclick="login()">Prijavi se</button>
+        <div class="prijava">
+            <h2 class="unselectable">Prijava</h2>
+            <input type="text" id="username" placeholder="Korisničko ime">
+            <div class="password-container">
+            <input type="password" id="password" placeholder="Lozinka">
+            <span class="toggle-password" onclick="togglePassword()">
+                <ion-icon name="eye-outline" id="eye-icon"></ion-icon>
+            </span>
+            </div>
+            <button class="unselectable" onclick="login()">Prijavi se</button>
+        </div>
+
+        <div class="obavestenje hidden">
+            <h2>Važno obaveštenje</h2>
+            <p>Planirano prebacivanje baze podataka na drugu platformu zakazano je za 28. mart 2025. od 20:00 do 00:00. Molimo vas da ne unosite podatke tokom ovog vremena kako biste izbegli gubitak podataka.</p>
+            <button class="unselectable" onclick="showPortal()">Razumem</button>
+        </div>
     </div>
 
     <div id="notification-container"></div>
