--- a/portal.html
+++ b/portal.html
@@ -14,7 +14,7 @@
 
 <header class="unselectable" id="portal">
     <a href="index.html" class="logo"><img src="images/logo.png">CM Agency</a>
-    <button class="btn hidden" id="logout" onclick="logout()">Odjavi se</button>
+    <button class="btn" id="logout" onclick="logout()">Odjavi se</button>
 </header>
 
 <div class="center-wrapper">
