Dodata pozadina za tamnu temu, kontakt forma izmene

--- a/index.html
+++ b/index.html
@@ -312,7 +312,7 @@
 
         <div class="form-group">
             <label for="opis">Objasnite nam ukratko kakav Vam projekat treba i osnovne informacije</label>
-            <textarea id="opis" placeholder="Potrebno nam je reklamiranje našim proizvodima putem Facebook reklama..."></textarea>
+            <textarea id="opis" placeholder="Potrebno nam je reklamiranje naših proizvoda putem Facebook reklama..."></textarea>
         </div>
 
         <button type="submit">Pošaljite upit</button>
