Dodato dosta novih video radova i manje popravke

--- a/index.html
+++ b/index.html
@@ -136,8 +136,8 @@
         <div class="video-card">
             <span class="video-title">@maskote_lazarevac</span>
             <a href="https://instagram.com/reel/DFXT-Dqs1rf" target="_blank">
-                <video src="images/radovi/maskote.mp4" muted loop autoplay playsinline></video>
-                <div class="video-loader"></div>
+            <video src="images/radovi/maskote.mp4" muted loop autoplay></video>
+            <div class="video-loader"></div>
             </a> 
             <button class="pause-btn" onclick="togglePlay(this)">
                 <ion-icon name="pause-outline"></ion-icon>
@@ -164,7 +164,7 @@
         <div class="video-card">
             <span class="video-title">@kiroprakticno</span>
             <a href="https://instagram.com/reel/DHVz8j5xMXY" target="_blank">
-            <video src="images/radovi/kiroprakticno.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -178,7 +178,7 @@
         <div class="video-card">
             <span class="video-title">@lukaxcvetkovic</span>
             <a href="https://instagram.com/reel/C3DW0c9tzpS" target="_blank">
-            <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/tutz_brix.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             </a>
             <button class="pause-btn" onclick="togglePlay(this)">
@@ -189,7 +189,77 @@
             </button>
         </div>
 
+        <div class="video-card">
+            <span class="video-title">@kiroprakticno</span>
+            <a href="https://instagram.com/reel/DHinZOPMQQf/" target="_blank">
+            <video src="images/radovi/kiroprakticno_noga.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
+            </a>
+            <button class="pause-btn" onclick="togglePlay(this)">
+                <ion-icon name="pause-outline"></ion-icon>
+            </button>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <ion-icon name="volume-mute-outline"></ion-icon>
+            </button>
+        </div>
+
+        <div class="video-card">
+            <span class="video-title">@kiroprakticno</span>
+            <a href="https://instagram.com/reel/DHgmsH0MUOm/" target="_blank">
+            <video src="images/radovi/kiroprakticno_kicma.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
+            </a>
+            <button class="pause-btn" onclick="togglePlay(this)">
+                <ion-icon name="pause-outline"></ion-icon>
+            </button>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <ion-icon name="volume-mute-outline"></ion-icon>
+            </button>
+        </div>
+
+        <div class="video-card">
+            <span class="video-title">@kiroprakticno</span>
+            <a href="https://instagram.com/reel/DHYwbW9MjKm/" target="_blank">
+            <video src="images/radovi/kiroprakticno_spavanje.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
+            </a>
+            <button class="pause-btn" onclick="togglePlay(this)">
+                <ion-icon name="pause-outline"></ion-icon>
+            </button>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <ion-icon name="volume-mute-outline"></ion-icon>
+            </button>
+        </div>
+
+        <div class="video-card">
+            <span class="video-title">@kiroprakticno</span>
+            <a href="https://instagram.com/reel/DHVz8j5xMXY/" target="_blank">
+            <video src="images/radovi/kiroprakticno_zglobovi.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
+            </a>
+            <button class="pause-btn" onclick="togglePlay(this)">
+                <ion-icon name="pause-outline"></ion-icon>
+            </button>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <ion-icon name="volume-mute-outline"></ion-icon>
+            </button>
+        </div>
+
+        <div class="video-card">
+            <span class="video-title">@lukaxcvetkovic</span>
+            <a href="https://www.instagram.com/reel/C3lFASENYXZ/" target="_blank">
+            <video src="images/radovi/tutz_patch.mp4" muted loop autoplay playsinline></video>
+            <div class="video-loader"></div>
+            </a>
+            <button class="pause-btn" onclick="togglePlay(this)">
+                <ion-icon name="pause-outline"></ion-icon>
+            </button>
+            <button class="mute-btn" onclick="toggleMute(this)">
+                <ion-icon name="volume-mute-outline"></ion-icon>
+            </button>
+        </div>
     </div>
+
 </section>
 
 <section class="testimonial" id="testimonial">
@@ -222,7 +292,7 @@
 
     <div class="testimonial-item">
         <div class="testimonial-video">
-            <video src="images/radovi/windows.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/tutz_windows.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
@@ -240,7 +310,7 @@
 
     <div class="testimonial-item">
         <div class="testimonial-video">
-            <video src="images/radovi/brix.mp4" muted loop autoplay playsinline></video>
+            <video src="images/radovi/tutz_brix.mp4" muted loop autoplay playsinline></video>
             <div class="video-loader"></div>
             <div class="video-overlay"></div>
         </div>
